tests/paczka1/fuzzy1/54308096.err
Error in line 4: M7nJrAeF5z S959 (5,7
Error in line 6: tDpuHSTyJt S959 56,0
Error in line 11: S959 S430 14,9
Error in line 5: rxuLRvNfB S430 99,1
Error in line 18: M7nJrAeF5z S959 21,7
Error in line 34: UOv S959 27,8
